fix: 코드래빗 리뷰 반영 - JDK 17 호환성 및 null 안전성 개선
- JDK 21 전용 메서드를 JDK 17 호환 코드로 변경
  - getLast() → get(size()-1)
  - getFirst() → get(0)
- 엔티티 null 안전성 강화
  - 생성자에 null 체크 추가
  - equals/hashCode 개선 (transient 객체 처리)
  - toString NPE 방지 (%d → %s)
- SSE 서비스 안정성 개선
  - sendEvent() 반환값 추가 (성공/실패 여부)
  - 재연결 시 개별 메시지 실패 처리 개선
- 테스트 활성화: SseEmittersServiceTest 제외 해제